# neur680-final-project

./: README.md  analyze.ipynb  fs_license.txt  pyproject.toml  train.ipynb  train.py  visualize.py
checkpoints/: combined.pt  ppmi_pretrained.pt
processed_data/: lab.csv  oasis3.csv  openbhb.csv  patient_data.csv  ppmi.csv
raw_data/: aseg_volumes.txt  demographic_clean.txt  lh_thickness.txt
raw_data/lab/: rh_thickness.txt
raw_data/oasis3/: .cookies-202659281777402784.txt  aseg_lh_rh_download_oasis_freesurfer.sh  healthy_oasis3.csv  unhealthy_oasis3.csv
raw_data/oasis3/healthy/: aseg_volumes.csv  lh_thickness.csv  rh_thickness.csv
raw_data/ppmi/: Demographics_26Apr2026.csv
scripts/: openbhb.py
src/: attention.py  config.py  model.py  trainer.py
src/data/: combined.py  lab.py  loaders.py  normalize.py  oasis3.py  ppmi.py
