[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn",
    "imbalanced-learn",
    "torch",
    "openpyxl>=3.1.5",
]
