[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn",
    "imbalanced-learn",
    "torch",
    "openpyxl>=3.1.5",
    "tqdm>=4.67.1",
    "neurocombat>=0.2.12",
    "openneuro-py>=2026.4.1",
    "huggingface-hub>=1.12.0",
]
